--- a/css/custom.css
+++ b/css/custom.css
@@ -2893,8 +2893,209 @@ input::placeholder {
         line-height: 27px;
     }
 }
+
 @media (max-width: 480px) {
-.authorization {
+    .authorization {
         background-size: 110%;
+    }
 }
+
+.registration {
+    background-image: url(../image/reg.png);
+}
+
+.registration__title {
+    padding-top: 35px;
+    margin-bottom: 35px;
+}
+
+.registration .authorization__right {
+    padding: 39px 100px;
+}
+
+.registration__auth {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #eee;
+    margin-bottom: 20px;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.registration__auth .socials__auth_title {
+    max-width: 189px;
+    margin-bottom: 0;
+}
+
+.registration__auth .socials__auth_link {
+    width: 131px;
+}
+
+.form__block {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.registration .remember-row label.checkbox {
+    font-size: 14px;
+}
+
+.registration__link {
+    color: var(--main-color);
+    text-decoration: underline;
+    transition: color 0.3s ease-in-out;
+}
+
+.registration__link:focus,
+.registration__link:hover {
+    color: var(--basic-blue-color);
+}
+
+.registration .authorization__form {
+    margin-bottom: 35px;
+}
+
+.registration__bottom {
+    font-size: 20px;
+}
+
+@media (max-width: 1600px) {
+    .registration .authorization__right {
+        padding: 40px;
+        width: 650px;
+    }
+
+    .registration__auth .socials__auth_link {
+        width: 57px;
+        height: 47px;
+    }
+}
+
+@media (max-width: 1280px) {
+    .registration__title {
+        padding-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .registration__auth {
+        padding: 12px 13px;
+    }
+
+    .registration__auth .socials__auth_link {
+        width: 49px;
+        height: 37px;
+    }
+
+    .registration .authorization__form {
+        margin-bottom: 10px;
+    }
+
+    .registration .authorization__right {
+        width: 549px;
+    }
+}
+
+@media (max-width: 992px) {
+    .registration .authorization__right {
+        width: 100%;
+    }
+
+    .form__block label {
+        flex-grow: 1;
+    }
+
+    .registration {
+        background-size: 40%;
+    }
+}
+
+@media (max-width: 768px) {
+    .registration {
+        background-size: 50%;
+    }
+
+    .registration__auth .socials__auth_title {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 480px) {
+    .registration {
+        background-size: 87%;
+    }
+
+    .registration .authorization__right {
+        width: 105%;
+        padding: 20px;
+    }
+
+    .form__block {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .form__block label {
+        width: 100%;
+    }
+
+    .registration__auth .socials__auth_title {
+        font-size: 14px;
+    }
+
+    .registration__auth {
+        gap: 10px;
+    }
+
+    .registration .socials__auth_list {
+        gap: 7px;
+    }
+}
+
+.forgot {
+    background-image: url(../image/forgot2.png);
+}
+
+@media (max-width: 992px) {
+    .authorization.forgot {
+        background-size: 38%;
+    }
+}
+
+@media (max-width: 768px) {
+    .authorization.forgot {
+        background-size: 48%;
+    }
+}
+
+@media (max-width: 600px) {
+    .authorization.forgot {
+        background-size: 64%;
+    }
+}
+
+@media (max-width: 480px) {
+    .authorization.forgot {
+        background-size: 80%;
+    }
+}
+
+#post {
+    max-width: 1275px;
+    border-radius: 20px;
+    display: flex;
+    overflow: hidden;
+}
+.post__img {
+    width: 730px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.post__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
