--- a/css/custom.css
+++ b/css/custom.css
@@ -3086,16 +3086,109 @@ input::placeholder {
 #post {
     max-width: 1275px;
     border-radius: 20px;
+    overflow: hidden;
+}
+
+.fancybox-content {
+    padding: 0;
+}
+
+.post__wrapper {
+    max-width: 1275px;
+    max-height: 730px;
+    border-radius: 20px;
     display: flex;
     overflow: hidden;
 }
+
 .post__img {
     width: 730px;
     border-radius: 20px;
     overflow: hidden;
 }
+
 .post__img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.post__text {
+    max-width: 545px;
+    padding: 10px 20px 18px;
+    height: auto;
+}
+
+.post__text_wrapper {
+    overflow-y: auto;
+    height: 100%;
+}
+
+.post__text_top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+.post__user {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.post__user .avatar-round {
+    width: 40px;
+    height: 40px;
+    border-radius: 100px;
+    overflow: hidden;
+}
+
+.post__user span {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    color: var(--text-color2);
+}
+
+.post__user .avatar-metka {
+    width: 20px;
+    height: 20px;
+}
+
+.post__text_text {
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+.post__text_bottom {
+    display: flex;
+    align-items: center;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+.post__text_bottom .post__date {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #A3A3A3;
+    padding-left: 6px;
+}
+.post__text_bottom .card__buttons {
+    margin-right: auto;
+}
+.post__text_bottom .card-likes {
+    margin-bottom: 0;
+}
+.post__text_comment {
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #ccc;
 }
