--- a/css/custom.css
+++ b/css/custom.css
@@ -3460,6 +3460,12 @@ input::placeholder {
     padding: 5px;
     border: 1px solid var(--main-color);
     border-radius: 120px;
+    transition: color 0.3s ease-in-out;
+}
+
+.info__owner:focus,
+.info__owner:hover {
+    color: var(--basic-blue-color);
 }
 
 .pet__about {
@@ -3509,6 +3515,7 @@ input::placeholder {
 .pet__btn .btn {
     flex-grow: 1;
     border-radius: 6px;
+    font-weight: 500;
 }
 
 .btn__transprent {
@@ -3670,6 +3677,7 @@ input::placeholder {
 @media (max-width: 480px) {
     .pet__title {
         font-size: 26px;
+        line-height: 1;
     }
 
     .pat__name {
@@ -3731,6 +3739,8 @@ input::placeholder {
 .person__info_search,
 .person__info_donat {
     max-width: 267px;
+    display: flex;
+    flex-direction: column;
 }
 
 .person__info_calendar {
@@ -3748,8 +3758,315 @@ input::placeholder {
 .person__info_map {
     width: 227px;
     height: 182px;
-    margin-bottom: 10px;
+    margin-bottom: auto;
     overflow: hidden;
     border: 1px solid var(--border-color);
     border-radius: 14px;
+}
+
+.person__info_btn,
+.btn__default_comunity {
+    padding: 12px 30px;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 6px;
+    margin-top: 7px;
+}
+
+.person__info_donat {
+    display: flex;
+    flex-direction: column;
+}
+
+.another-pet .swiper-button-prev svg path,
+.another-pet .swiper-button-next svg path {
+    transition: fill 0.3s ease-in-out;
+}
+
+.another-pet .swiper-button-prev:hover svg path,
+.another-pet .swiper-button-next:hover svg path {
+    fill: var(--basic-blue-color);
+}
+
+.person__info_comunity {
+    display: flex;
+    margin-bottom: auto;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.text-main {
+    color: var(--main-color);
+}
+
+.person__info_comunity-flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.person__info_calendar {
+    display: flex;
+    gap: 59px;
+}
+
+.calendar {
+    background: #fff;
+    border-radius: 13px;
+    width: 243px;
+    padding: 10px;
+    border: 1px solid var(--border-color);
+}
+
+.calendar #monthYear {
+    padding-left: 6px;
+    margin-bottom: 15px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 27px;
+    color: #333333;
+}
+
+.calendar-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.calendar-table th,
+.calendar-table td {
+    width: 32px;
+    height: 32px;
+    text-align: center;
+}
+
+.calendar-table th {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 15px;
+    color: #333333;
+}
+
+.calendar-table td {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 15px;
+    color: #333333;
+    border-radius: 50%;
+    transition: background .3s;
+    position: relative;
+    cursor: default;
+}
+
+.calendar-table td.today {
+    background: var(--main-color);
+    color: #fff;
+    font-weight: 600;
+}
+
+.calendar-table td.day-circle {
+    background: #f0f0f0;
+    color: #828282;
+    font-weight: 600;
+}
+
+.calendar-table td.grey {
+    color: #ccc;
+}
+
+.comments__title {
+    margin: 0;
+    margin-bottom: 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 41px;
+    color: var(--text-color);
+}
+
+.comments__body {
+    border: 1px solid var(--border-color);
+}
+
+.comments__reaction {
+    padding: 10px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.comments__reaction:not(:last-child) {
+    border-bottom: 1px solid var(--border-color);
+}
+
+.full-width {
+    width: 100%;
+    flex-basis: 100%;
+}
+
+.comments__post {
+    width: 120px;
+    border-radius: 8px;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+
+.comments__post img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.comments__link {
+    color: var(--main-color);
+    transition: color 0.3s ease-in-out;
+}
+
+.comments__link:focus,
+.comments__link:hover {
+    color: var(--basic-blue-color);
+}
+
+.comments__preview {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.comments__rounds {
+    height: 120px;
+    width: 120px;
+    position: relative;
+    flex-shrink: 0;
+}
+
+.comments__rounds_first,
+.comments__rounds_second {
+    position: absolute;
+    width: 85px;
+    height: 85px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.comments__rounds_first {
+    top: 0;
+    left: -5px;
+}
+
+.comments__rounds_second {
+    border: 5px solid #fff;
+    top: 28%;
+    right: -8px;
+}
+
+.person__info_search-text {
+    margin-bottom: 10px;
+}
+
+@media (max-width: 1600px) {
+    .person__info {
+        flex-wrap: wrap;
+    }
+
+    .person__info_calendar {
+        order: 1;
+    }
+
+    .person__info_search,
+    .person__info_donat {
+        width: calc((100% - 20px) / 2);
+        max-width: 100%;
+    }
+
+    .person__info_map {
+        width: 100%;
+    }
+
+    .person__info_calendar {
+        justify-content: space-between;
+    }
+
+    .calendar {
+        width: 339px;
+    }
+}
+
+@media (max-width: 768px) {
+    .comments__title {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 576px) {
+    .person__info {
+        gap: 10px;
+    }
+
+    .person__info_search,
+    .person__info_donat {
+        width: 100%;
+    }
+
+    .person__info_calendar {
+        flex-direction: column;
+        justify-content: normal;
+        gap: 20px;
+    }
+
+    .calendar {
+        width: 100%;
+    }
+
+    .comments__post {
+        width: 40px;
+    }
+
+    .comments__reaction {
+        padding: 8px;
+        gap: 10px;
+        align-items: start;
+    }
+
+    .comments__rounds {
+        height: 40px;
+        width: 40px;
+    }
+
+    .comments__rounds_first,
+    .comments__rounds_second {
+        width: 40px;
+        height: 40px;
+    }
+
+    .comments__rounds_second {
+        border: 2px solid #fff;
+    }
+}
+
+@media (max-width: 480px) {
+    .comments__text {
+        font-size: 14px;
+    }
+
+    .person__info {
+        font-size: 14px;
+    }
+
+    .person__info_comunity {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .person__info_comunity-flex {
+        width: 100%;
+    }
 }
